--- a/chinslickingweb/home/templates/about.html
+++ b/chinslickingweb/home/templates/about.html
@@ -11,44 +11,33 @@
     {% endblock %}
 {% endblock %}
 
-{% block banner %}
+{% comment %}{% block banner %}
 <!--滚动切换图片-->
 <div class="hero-slider">
-    <div class="single-slide" style="background-image: url({% static 'images/banner_8.jpg' %})">
+    {% for item in banner_list %}
+    <div class="single-slide" style="background-image: url(/uploads/{{ item.image_url }})">
         <div class="inner">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12 text-center">
+                    <div class="col-sm-12 col-sm-12 col-md-12 col-lg-12 text-center">
                         <div class="slide-content">
-                            <h2>{% trans "华夏传统美食的国际级复刻者" %}</h2>
+                            <h2>{% trans item.text %}</h2>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="single-slide" style="background-image: url({% static 'images/banner_7.jpg' %})">
-        <div class="inner">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-12 text-center">
-                        <div class="slide-content">
-                            <h2>{% trans "华夏传统美食的国际级复刻者" %}</h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    {% endfor %}
 </div>
-{% endblock %}
+{% endblock %}{% endcomment %}
 
 {% block content %}
-<div class="service-area bg2 sp" style="background-color: #a7d676;">
+<div class="service-area bg2 sp">
     <div class="container">
         <div class="row">
             <div class="single-service-row">
-                <div class="col-lg-4 col-md-6 single-service" style="border-right: 1px solid #eee;">
+                <div class="col-sm-12 col-sm-12 col-md-6 col-lg-4 single-service-2" style="border-right: 1px solid #eee;">
                     <div class="text-center">
                         <div class="title">
                             <h2><b>2015{% trans "年" %}</b></h2>
@@ -58,7 +47,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 single-service" style="border-right: 1px solid #eee;">
+                <div class="col-sm-12 col-sm-12 col-md-6 col-lg-4 single-service-2" style="border-right: 1px solid #eee;">
                     <div class="text-center">
                         <div class="title">
                             <h2><b>FDA</b></h2>
@@ -68,7 +57,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 single-service">
+                <div class="col-sm-12 col-sm-12 col-md-6 col-lg-4 single-service-2">
                     <div class="text-center">
                         <div class="title">
                             <h2><b>3{% trans "个" %}</b></h2>
@@ -93,9 +82,9 @@
                 <hr class="hr-2">
             </div>
         </div>
-        <div class="row">
-            <div class="col-lg-5 col-md-6 single-service">
-                <div class="">
+        <div class="row" style="position: relative">
+            <div class="col-lg-5 col-md-6 single-service" style="z-index: 100;">
+                <div class="animated-box-img">
                     {% if comp_about_model %}
                     <img src="/uploads/{{ comp_about_model.comp_image }}" alt="portfolio-image">
                     {% else %}
@@ -103,8 +92,8 @@
                     {% endif %}
                 </div>
             </div>
-            <div class="col-lg-7 col-md-6 single-service">
-                <div class="inner" style="padding: 0;">
+            <div class="col-lg-7 col-md-6 single-service" style="z-index: 100;">
+                <div class="inner inner-hover" style="padding: 0;">
                     <div>
                         <h2><i>{% trans comp_about_model.title %}</i></h2>
                         <p style="text-indent:2em; font-size:16px; letter-spacing:1px;">
@@ -113,9 +102,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="inner" style="width: 100%; height: 370px; background-color: #a6e67d; margin-top: -415px;"></div>
+            <div class="inner" style="position: absolute; bottom: 0; width: 100%; min-height: 370px; background-color: #a6e67d;"></div>
         </div>
     </div>
 </div>
@@ -130,14 +117,14 @@
             </div>
             <div class="sub-title">
                 <hr class="hr-2">
-                <span>我们的理念：绿色、健康、安全</span>
+                <span>{% trans "我们的理念：绿色、健康、安全" %}</span>
                 <hr class="hr-2">
             </div>
         </div>
         <div class="row">
             {% for item in culture %}
             <div class="col-md-12 single-gallery">
-                <div class="inner">
+                <div class="outter-hover">
                     <img src="/uploads/{{item.image_url}}" alt="企业文化">
                 </div>
             </div>
@@ -166,7 +153,7 @@
                 <div class="row">
                     {% for item in honor %}
                     <div class="col-sm-4 single-gallery">
-                        <div class="inner">
+                        <div class="inner inner-hover animated-box-img">
                             <img src="/uploads/{{item.image_url}}" alt="{{item.type_name}}" style="height: 220px;">
                         </div>
                     </div>
@@ -196,7 +183,7 @@
             <div class="grid">
             {% for item in aptitude %}
             <div class="col-sm-4 single-gallery grid-item">
-                <div class="inner">
+                <div class="inner inner-hover">
                     <img src="/uploads/{{item.image_url}}" alt="{{item.type_name}}">
                 </div>
             </div>
@@ -235,7 +222,7 @@
                             <div class="arrow"></div>
                         </div>
                         <div class="timeline-marker"></div>
-                        <div class="timeline-content">
+                        <div class="timeline-content outter-hover">
                             <!--<h3 class="timeline-title">Event Title</h3>
                             <p>Nullam vel sem. Nullam vel sem. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Donec orci lectus, aliquam ut, faucibus non, euismod id, nulla. Donec vitae sapien ut libero venenatis faucibus. ullam dictum felis
                                 eu pede mollis pretium. Pellentesque ut neque.</p>-->
