--- a/chinslickingweb/home/templates/news_list.html
+++ b/chinslickingweb/home/templates/news_list.html
@@ -11,8 +11,7 @@
     {% endblock %}
 {% endblock %}
 
-{% block banner %}
-
+{% comment %}{% block banner %}
 <!--滚动切换图片-->
 <div class="hero-slider">
     <div class="single-slide" style="background-image: url({% static 'images/banner_6.jpg' %})">
@@ -56,7 +55,7 @@
         </div>
     </div>
 </div>
-{% endblock %}
+{% endblock %}{% endcomment %}
 
 {% block content %}
 <div class="faq-area-2 sp bg1">
@@ -79,12 +78,12 @@
                 <div class="row bg2" style="padding: 25px 10px;margin-bottom: 10px;">
                     <div class="col-md-4">
                         <div class="about-img">
-                            <a href="/king/news_detail/{{item.id}}"><img src="/uploads/{{item.cover_image_url}}" alt="{{item.title}}"></a>
+                            <a href="/king/news_detail/{{item.id}}?banner={{ banner }}"><img src="/uploads/{{item.cover_image_url}}" alt="{{item.title}}"></a>
                         </div>
                     </div>
                     <div class="col-md-8">
                         <div class="about-content" style="margin-top:0;">
-                            <h3 style="margin: 5px 0;"><a href="/king/news_detail/{{item.id}}">{{item.title|truncate_point:'12'}}</a></h3>
+                            <h3 style="margin: 5px 0;"><a href="/king/news_detail/{{item.id}}?banner={{ banner }}">{{item.title|truncate_point:'12'}}</a></h3>
                             <div>{{item.brief|truncate_point:'180'}}</div>
                         </div>
                     </div>
@@ -96,16 +95,16 @@
             <div class="col-md-3">
                 <div class="faq-sidebar-wrap">
                     <h3>{% trans "最新动态" %}</h3>
-                    <!--<ul class="faq-sidebar">
+                    {% comment %}<ul class="faq-sidebar">
                         {% for item in resp_lasted %}
-                        <li><a href="/king/resp_detail/{{item.id}}"><span>{{ forloop.counter }}.</span>&nbsp;{{item.title}}</a></li>
+                        <li><a href="/king/resp_detail/{{item.id}}?banner={{ banner }}"><span>{{ forloop.counter }}.</span>&nbsp;{{item.title}}</a></li>
                         {% endfor %}
-                    </ul>-->
+                    </ul>{% endcomment %}
 
                     {% for item in resp_lasted %}
                     <div class="product-commend about-img">
                         <a href="/king/news_detail/{{item.id}}">
-                            <img src="/uploads/{{ item.cover_image_url }}" alt="{{item.title}}" title="{{item.title}}">
+                            <img src="/uploads/{{ item.cover_image_url }}?banner={{ banner }}" alt="{{item.title}}" title="{{item.title}}">
                         </a>
                         <div class="product-commend-title">{{item.title|truncate_point:'12'}}</div>
                     </div>
@@ -136,12 +135,12 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="about-img">
-                            <a href="/king/news_detail/{{item.id}}"><img src="/uploads/{{item.cover_image_url}}" alt="{{item.title}}"></a>
+                            <a href="/king/news_detail/{{item.id}}?banner={{ banner }}"><img src="/uploads/{{item.cover_image_url}}" alt="{{item.title}}"></a>
                         </div>
                     </div>
                     <div class="col-md-7">
                         <div class="about-content" style="margin-top:0;">
-                            <h3 style="margin: 5px 0;"><a href="/king/news_detail/{{item.id}}">{{item.title|truncate_point:'30'}}</a></h3>
+                            <h3 style="margin: 5px 0;"><a href="/king/news_detail/{{item.id}}?banner={{ banner }}">{{item.title|truncate_point:'30'}}</a></h3>
                             <div>{{item.brief|truncate_point:'300'}}</div>
                         </div>
                     </div>
@@ -152,15 +151,15 @@
                             <div>{{item.create_time|date:'Y年m月d日 H:i:s'}}</div>
                         </div>
                         <div class="about-content" style="text-align: center;">
-                            <a class="btn btn-default" style="width: 120px; background-color: #fbdf50; color: #fff;" href="/king/news_detail/{{item.id}}">{% trans "更多" %}>></a>
+                            <a class="btn btn-default" style="width: 120px; background-color: #fbdf50; color: #fff;" href="/king/news_detail/{{item.id}}?banner={{ banner }}">{% trans "更多" %}>></a>
                         </div>
                     </div>
                 </div>
             </div>
             {% endfor %}
-
-            {% include "./pager.html" with page_list=news_list %}
         </div>
+
+        {% include "pager.html" with page_list=news_list %}
     </div>
 </div>
 {% endblock %}
