--- a/chinslickingweb/home/templates/duty_list.html
+++ b/chinslickingweb/home/templates/duty_list.html
@@ -11,7 +11,7 @@
     {% endblock %}
 {% endblock %}
 
-{% block banner %}
+{% comment %}{% block banner %}
 <!--<div class="hero-slider">
     <div class="single-slide" style="background-image: url({% static 'images/slide1.jpg' %})">
         <div class="inner">
@@ -45,7 +45,7 @@
         </h4>
     </div>
 </div>
-{% endblock %}
+{% endblock %}{% endcomment %}
 
 {% block content %}
 <div class="faq-area-2 sp bg2">
