--- a/chinslickingweb/home/templates/job_list.html
+++ b/chinslickingweb/home/templates/job_list.html
@@ -11,7 +11,7 @@
     {% endblock %}
 {% endblock %}
 
-{% block banner %}
+{% comment %}{% block banner %}
 <!--滚动切换图片-->
 <div class="hero-slider">
     <div class="single-slide" style="background-image: url({% static 'images/banner_7.jpg' %})">
@@ -55,7 +55,7 @@
         </div>
     </div>
 </div>
-{% endblock %}
+{% endblock %}{% endcomment %}
 
 {% block content %}
 <div class="faq-area sp bg2">
