--- a/chinslickingweb/home/templates/layer_coupon_form.html
+++ b/chinslickingweb/home/templates/layer_coupon_form.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load i18n %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -15,23 +16,23 @@
             <form id="myform" class="layui-form">
                 {% csrf_token %}
                 <div class="layui-form-item">
-                    <label class="layui-form-label">姓名：</label>
+                    <label class="layui-form-label">{% trans "姓名：" %}</label>
                     <div class="layui-input-block">
-                        <input type="text" name="username" required lay-verify="required|username" placeholder="请输入姓名"
+                        <input type="text" name="username" required lay-verify="required|username" placeholder="{% trans '请输入姓名' %}"
                                autocomplete="off" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-form-item">
-                    <label class="layui-form-label">手机号：</label>
+                    <label class="layui-form-label">{% trans "手机号：" %}</label>
                     <div class="layui-input-block">
-                        <input type="text" name="phone" required lay-verify="required|phone" placeholder="请输入手机号"
+                        <input type="text" name="phone" required lay-verify="required|phone" placeholder="{% trans '请输入手机号' %}"
                                autocomplete="off" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-form-item">
-                    <label class="layui-form-label">邮箱：</label>
+                    <label class="layui-form-label">{% trans "邮箱：" %}</label>
                     <div class="layui-input-block">
-                        <input type="text" name="email" required lay-verify="required|email" placeholder="请输入邮箱"
+                        <input type="text" name="email" required lay-verify="required|email" placeholder="{% trans '请输入邮箱' %}"
                                autocomplete="off" class="layui-input">
                     </div>
                 </div>
@@ -42,17 +43,17 @@
                     </div>
                 </div>-->
                 <div class="layui-form-item">
-                    <label class="layui-form-label">性别：</label>
+                    <label class="layui-form-label">{% trans "性别：" %}</label>
                     <div class="layui-input-block">
-                        <input type="radio" name="sex" value="男" title="男" checked>
-                        <input type="radio" name="sex" value="女" title="女">
-                        <input type="radio" name="sex" value="保密" title="保密">
+                        <input type="radio" name="sex" value="男" title="{% trans '男' %}" checked>
+                        <input type="radio" name="sex" value="女" title="{% trans '女' %}">
+                        <input type="radio" name="sex" value="保密" title="{% trans '保密' %}">
                     </div>
                 </div>
                 <div class="layui-form-item">
                     <div class="layui-input-block">
-                        <button type="submit" id="btnSave" class="layui-btn" lay-submit lay-filter="go">提交</button>
-                        <button type="button" id="btnCancel" name="btnCancel" class="layui-btn layui-btn-primary">取消</button>
+                        <button type="submit" id="btnSave" class="layui-btn" lay-submit lay-filter="go">{% trans "提交" %}</button>
+                        <button type="button" id="btnCancel" name="btnCancel" class="layui-btn layui-btn-primary">{% trans "取消" %}</button>
                     </div>
                 </div>
             </form>
@@ -74,10 +75,10 @@
             form.verify({
                 username: function(value, item){
                     if(value.length >= 50){
-                        return '超过最大长度！';
+                        return '{% trans "超过最大长度！" %}';
                     }
                 },
-                phone: [/^(((13[0-9]{1})|(14[0-9]{1})|(17[0-9]{1})|(15[0-9]{1})|(18[0-9]{1}))+\d{8})$/, '请输入正确手机号！'],
+                phone: [/^(((13[0-9]{1})|(14[0-9]{1})|(17[0-9]{1})|(15[0-9]{1})|(18[0-9]{1}))+\d{8})$/, '{% trans "请输入正确手机号！" %}'],
                 // email: function(value, item){
                 //     //
                 // },
@@ -94,7 +95,7 @@
                     timeout: 3000,
                     success: function(data, textStatus){
                         if(data.code == 0) {
-                            layer.msg('信息已提交', {
+                            layer.msg('{% trans "信息已提交" %}', {
                                 icon: 1,
                                 zIndex: layer.zIndex + 10,
                                 time: 2000,
